moved styling from html to css

--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,11 @@ header i {
     color: gray;
 }
 
+/* MAIN CLASSES */
+#avatar-container {
+    width: 15rem;
+}
+
 /* FOOTER CLASSES */
 
 footer {
